--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,6 @@
-h1 Hello #{name}!
-a(href="/users") Users
+block content
 
-img(src="/images/sunset.jpg")
+  h1 Hello #{name}!
+  a(href="/users") Users
+
+  img(src="/images/sunset.jpg", width="500")
