--- a/views/products/index.pug
+++ b/views/products/index.pug
@@ -5,21 +5,20 @@ block content
 
   .d-flex.align-items-center
 
-      form.ml-auto(action="/products", method="GET", class="d-flex")
+      form.ml-auto(action="/products/search", method="GET", class="d-flex")
         input(type="text", name="q", class="form-control")
         button(class="btn btn-primary ml-2") Search
 
-  
   .container
     .row
       each product in products
-        .col-md-3.col-sm-6.mb-4.p-0
-          .card(style='width: 16rem;')
+        .col-lg-3.col-md-4.col-sm-6
+          .card.mb-4
             img.card-img-top(src= product.image, alt='img')
             .card-body
               h5.card-title= product.name
               p.card-text= product.description
-              a.btn.btn-primary(href='#') Add to cart
+              a.btn.btn-primary(href='/cart/add/' + product.id) Add to cart
 
   nav
   ul.pagination.justify-content-end
